# cobaltOS

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  TO-DO.txt  log.txt  spec.txt  todo.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml  rust_test.yml
configs/: network.toml
docs/: SystemCalls.xlsx  index.rst
docs/subsystems/: Terminal.uxf  template.txt  timer.txt  virtualfs.txt
root/boot/: message.txt
src/: config.rs  device.rs  interrupts.rs  lib.rs  macros.rs  main.rs  serial.rs
src/api/: mod.rs
src/arch/i386/: cmos.rs  mod.rs
src/arch/i386/interrupts/: gdt.rs  idt.rs  mod.rs  pics.rs
src/arch/i386/syscalls/: calls.rs  mod.rs
src/configs/: network.toml
src/fat32/: mod.rs
src/interrupts/: gdt.rs  idt.rs  pics.rs
src/sys/: acpi.rs  ansi_widgets.rs  ansi_widgets.rs.save  ata.rs  clock.rs  console.rs  device_manager.rs  keyboard.rs  mod.rs  pci.rs  pci_details.rs  pit.rs  process.rs  sound.rs  timer.rs  vga.rs
src/sys/mem/: allocator.rs  frame_alloc.rs  heap.rs  mod.rs  page_tables.rs  paging.rs
src/sys/net/: dhcp.rs  mod.rs  rtl8139.rs  socket.rs
src/sys/shell/: mod.rs
src/sys/shell/cmd/: dsk.rs  fs.rs  install.rs  mod.rs  net.rs  pci.rs  syscall.rs  text_editor.rs
src/sys/storage/: ata.rs  ata.rs.save  mod.rs
src/sys/storage/fs/: bitmap.rs  block.rs  dev_handle.rs  file_table.rs  mod.rs  superblock.rs
src/sys/ustar/: metadata.rs  mod.rs
src/sys/vfs/: filesystem.rs  mod.rs
src/sys/vfs/fat/: mod.rs
src/systems/: .mod.rs.swp  mod.rs
src/systems/graphics/: mod.rs
src/systems/graphics/drivers/: mod.rs  vga.rs
src/systems/output/: mod.rs
