[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}
uart_16550 = "0.2.15"
spin = "0.5.2"
x86_64 = "0.14.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
volatile = "0.2.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
vga = []
headless = []

[package.metadata.bootimage]
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-m", "128M", "-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]