[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}
uart_16550 = "0.2.15"
spin = "0.5.2"
x86_64 = "0.14.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
volatile = "0.2.0"
linked_list_allocator = "0.9.0"
bit_field = "0.10.0"
acpi = "4.0.0"
aml = "0.16.0"
smoltcp = { version = "0.7.5", default-features = false, features = ["alloc", "ethernet", "socket-tcp", "socket-udp", "proto-ipv4", "proto-dhcpv4"] }
# file_systems = "0.2.0"
bytes = {version = "1.1.0", default_features = false}
array-macro = "2.1.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
vga = []
headless = []
log_debug = []
breakpoints = []

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-m", "128M", 
    "-serial", "stdio", 
    "-hdb", "drive.img",
    "-netdev", "user,id=network0", 
    "-device", "rtl8139,netdev=network0,mac=52:54:00:12:34:56"
    ]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-m", "128M", 
    "-serial", "stdio"
    ]
test-timeout = 300  
test-success-exit-code = 33 