[package]
name = "cobalt_os"
version = "0.2.0"
edition = "2018"
description = "A Simple x64 Kernel"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}
uart_16550 = "0.2.15"
spin = "0.5.2"
x86_64 = "0.14.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
volatile = "0.2.0"
linked_list_allocator = "0.9.0"
bit_field = "0.10.0"
acpi = "4.0.0"
aml = "0.16.0"
smoltcp = { version = "0.7.5", default-features = false, features = ["alloc", "ethernet", "socket-tcp", "socket-udp", "proto-ipv4", "proto-dhcpv4"] }
bytes = {version = "1.1.0", default_features = false}
array-macro = "2.1.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
block_device = "0.1.2"
object = { version = "0.26.2", default-features = false, features = ["read"] }

[dependencies.fat32]
version = "0.2.0"
default_features = false
features = ["512"]


[dependencies.iced-x86]
version = "1.15.0"
default-features = false
# See below for all features
features = ["no_std", "decoder", "nasm", "intel"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
vga = []
headless = []
log_debug = []
breakpoints = []

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-m", "1024M", 
    "-serial", "stdio", 
    "-hdc", "drive.img",
    #"-hdb", "drive.img",
    "-netdev", "user,id=network0", 
    "-device", "rtl8139,netdev=network0,mac=52:54:00:12:34:56",
    "-s"
    ]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-m", "1024M", 
    "-serial", "stdio", 
    "-hdb", "drive.img",
    "-netdev", "user,id=network0", 
    "-device", "rtl8139,netdev=network0,mac=52:54:00:12:34:56",
    "-display", "none"
    ]
test-timeout = 300  
test-success-exit-code = 33 
